martian-derive/tests/ui_martian_filetype/test_one_input.rs
use martian_derive::martian_filetype;

martian_filetype! {txt}

fn main() {}